Deployment/Deployment-Order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-dep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order-service-pod
  template:
    metadata:
      labels:
        app: order-service-pod
    spec:
      containers:
      - name: order-service-container
        image: primero21/order-service:v1
        ports:
        - containerPort: 8100
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-svc
spec:
  selector:
    app: order-service-pod
  ports:
  - port: 8100
    protocol: TCP
    targetPort: 8100
  type: LoadBalancer
