Deployment/Deployment-Payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service-dep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: payment-service-pod
  template:
    metadata:
      labels:
        app: payment-service-pod
    spec:
      containers:
      - name: payment-service-container
        image: primero21/payment-service:v1
        ports:
        - containerPort: 8300
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service-svc
spec:
  selector:
    app: payment-service-pod
  ports:
  - port: 8300
    protocol: TCP
    targetPort: 8300
  type: ClusterIP
