Deployment/Kitchen-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchen-service-dep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kitchen-service-pod
  template:
    metadata:
      labels:
        app: kitchen-service-pod
    spec:
      containers:
      - name: kitchen-service-container
        image: primero21/kitchen-service:v1
        ports:
        - containerPort: 8200
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kitchen-service-svc
spec:
  selector:
    app: kitchen-service-pod
  ports:
  - port: 8200
    protocol: TCP
    targetPort: 8200
  type: ClusterIP
