Deployment/Ingress-config-kong.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: oidc,rate-limit,ip-allow
spec:
  rules:
  - http:
      paths:
      - path: /prueba
        pathType: ImplementationSpecific
        backend:
          service:
            name: order-service-svc
            port:
              number: 8100
  ingressClassName: kong
